--- a/TrotineteElectrice/src/app/components/details/details.component.html
+++ b/TrotineteElectrice/src/app/components/details/details.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="scooterDetails">
-    <img [src]="scooterDetails.imageUrl" alt="{{ scooterDetails.name }}">
+    <img [src]="scooterDetails.image" alt="{{ scooterDetails.name }}">
     <h2>{{ scooterDetails.name }}</h2>
     <p><strong>Maximum Weight:</strong> {{ scooterDetails.weightsupported }}</p>
     <p><strong>Status:</strong> {{ scooterDetails.status }}</p>
